WIP Blst Wrap C#

--- a/Nethermind.KZGCeremony/Nethermind.KZGCeremony.csproj
+++ b/Nethermind.KZGCeremony/Nethermind.KZGCeremony.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Blst.Bindings" Version="0.1.0" />
+  </ItemGroup>
+
 </Project>
