--- a/Nethermind.KZGCeremony/Nethermind.KZGCeremony.csproj
+++ b/Nethermind.KZGCeremony/Nethermind.KZGCeremony.csproj
@@ -10,4 +10,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Nethermind.Blst\Nethermind.Blst.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Classes\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Classes\" />
+  </ItemGroup>
 </Project>
