--- a/Nethermind.KZGCli/Nethermind.KZGCli.csproj
+++ b/Nethermind.KZGCli/Nethermind.KZGCli.csproj
@@ -7,12 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <AssemblyName>kzg</AssemblyName>
+  </PropertyGroup>
   <ItemGroup>
     <None Remove="McMaster.Extensions.CommandLineUtils" />
     <None Remove="System.CommandLine" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.0.2" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
   <ItemGroup>
