--- a/Nethermind.Blst/Nethermind.Blst.csproj
+++ b/Nethermind.Blst/Nethermind.Blst.csproj
@@ -10,13 +10,11 @@
     <ProjectReference Include="..\Nethermind.Core\Nethermind.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="runtimes\linux-arm64\native\" />
+    <None Remove="runtimes\linux-x64\native\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="runtimes\linux-arm\native\blst.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="runtimes\linux-arm64\native\blst.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="runtimes\linux-x64\native\blst.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="runtimes\osx-arm64\native\blst.dylib">
@@ -25,5 +23,9 @@
     <None Update="runtimes\osx-x64\native\blst.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="runtimes\linux-arm64\native\" />
+    <Folder Include="runtimes\linux-x64\native\" />
   </ItemGroup>
 </Project>
