--- a/Nethermind.Blst/Nethermind.Blst.csproj
+++ b/Nethermind.Blst/Nethermind.Blst.csproj
@@ -10,17 +10,19 @@
     <ProjectReference Include="..\Nethermind.Core\Nethermind.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="runtimes\linux-arm64\native\" />
-    <None Remove="runtimes\linux-x64\native\" />
-  </ItemGroup>
-  <ItemGroup>
     <None Update="runtimes\linux-arm\native\blst.so">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="runtimes\linux-x64\native\blst.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="runtimes\osx-arm64\native\blst.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="runtimes\osx-x64\native\blst.dylib">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="runtimes\win-x64\native\blst.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
