--- a/Nethermind.KZGCli/Nethermind.KZGCli.csproj
+++ b/Nethermind.KZGCli/Nethermind.KZGCli.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PublishSingleFile>true</PublishSingleFile> 
+    <SelfContained>true</SelfContained> 
+    <RuntimeIdentifiers>win-x64;linux-x64;linux-arm64;osx-x64;osx-arm64</RuntimeIdentifiers> 
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract> 
+    <AssemblyName>kzg</AssemblyName> 
+    <UseAppHost>true</UseAppHost>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
