--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,11 +43,12 @@ jobs:
       with:
         submodules: recursive
     - name: Publish for ${{ matrix.target.arch }}
-      run: dotnet publish Nethermind.KZGCli/Nethermind.KZGCli.csproj --self-contained -c Release -p:Version=${{ inputs.tag }} -o out/${{ matrix.target.arch }} --runtime ${{ matrix.target.arch }} /p:DebugType=None /p:DebugSymbols=false
+      run: dotnet publish Nethermind.KZGCli/Nethermind.KZGCli.csproj --self-contained -c Release -p:Version=${{ inputs.tag }} -o out -p:AssemblyName=kzg-${{ matrix.target.arch }} --runtime ${{ matrix.target.arch }} /p:DebugType=None /p:DebugSymbols=false
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
-        file: out/${{ matrix.target.arch }}
+        file_glob: true
+        file: out/*
         tag: v${{ inputs.tag }}
         overwrite: true
         body: "Release ${{ inputs.tag }} of the kzg tool"
