--- a/Nethermind.KZGCeremony/Nethermind.KZGCeremony.csproj
+++ b/Nethermind.KZGCeremony/Nethermind.KZGCeremony.csproj
@@ -16,4 +16,10 @@
   <ItemGroup>
     <Folder Include="Classes\" />
   </ItemGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <StripSymbols>true</StripSymbols>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
+  </PropertyGroup>
 </Project>
