--- a/Nethermind.KZGCeremonyTest/Nethermind.KZGCeremonyTest.csproj
+++ b/Nethermind.KZGCeremonyTest/Nethermind.KZGCeremonyTest.csproj
@@ -35,4 +35,10 @@
   <ItemGroup>
     <Folder Include="Helpers\" />
   </ItemGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <StripSymbols>true</StripSymbols>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
+  </PropertyGroup>
 </Project>
