--- a/Nethermind.KZGCli/Nethermind.KZGCli.csproj
+++ b/Nethermind.KZGCli/Nethermind.KZGCli.csproj
@@ -13,11 +13,10 @@
     <UseAppHost>true</UseAppHost>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <AssemblyName>kzg</AssemblyName>
-  </PropertyGroup>
-  <PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <StripSymbols>true</StripSymbols>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="McMaster.Extensions.CommandLineUtils" />
