--- a/Nethermind.Secp256k1/Nethermind.Secp256k1.csproj
+++ b/Nethermind.Secp256k1/Nethermind.Secp256k1.csproj
@@ -27,5 +27,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nethermind.Native\Nethermind.Native.csproj" />
-  </ItemGroup>
+  </ItemGroup>  
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <StripSymbols>true</StripSymbols>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
+  </PropertyGroup>
 </Project>
