--- a/Nethermind.KZGCli/Nethermind.KZGCli.csproj
+++ b/Nethermind.KZGCli/Nethermind.KZGCli.csproj
@@ -23,6 +23,7 @@
     <None Remove="System.CommandLine" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.46.1-preview.0.19" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
   <ItemGroup>
